# Glacier

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.bat  generate-docs.bat  generate.bat  todo.txt
Glacier/: CMakeLists.txt
Glacier/include/: Application.hpp  Buffer.hpp  File.hpp  IndexBuffer.hpp  Pipeline.hpp  PipelineInfo.hpp  Renderer.hpp  Shader.hpp  UniformBuffer.hpp  VertexBuffer.hpp  Window.hpp  common.hpp  glacier.hpp
Glacier/include/core/: Application.hpp  common.hpp
Glacier/include/graphics/: BufferElement.hpp  Camera.hpp  IndexBuffer.hpp  LifecycleObject.hpp  Pipeline.hpp  Renderer.hpp  Shader.hpp  UniformBuffer.hpp  VertexBuffer.hpp  Window.hpp
Glacier/include/internal/: utility.hpp
Glacier/include/io/: Buffer.hpp  File.hpp
Glacier/include/math/: math.hpp
Glacier/src/: Application.cpp  File.cpp  IndexBuffer.cpp  Pipeline.cpp  Renderer.cpp  Shader.cpp  UniformBuffer.cpp  VertexBuffer.cpp  Window.cpp  common.cpp  utility.cpp
Glacier/src/core/: Application.cpp  common.cpp
Glacier/src/graphics/: Camera.cpp  IndexBuffer.cpp  Pipeline.cpp  Renderer.cpp  Shader.cpp  UniformBuffer.cpp  VertexBuffer.cpp  Window.cpp
Glacier/src/internal/: utility.cpp
Glacier/src/io/: File.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: compile.bat  fragment.glsl  vertex.glsl  vertex.spv
Sandbox/include/: SandboxApp.hpp
Sandbox/src/: main.cpp
